--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME="Noon Care"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:hXx2Swz6mClFc6i7kllSc0EAuh4eufVOA9aMvK8QwtE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
