set Auth Views And Admin Middewares

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:hXx2Swz6mClFc6i7kllSc0EAuh4eufVOA9aMvK8QwtE=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_DOMAIN='nooncare.test'
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
